// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SEO should render articles correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={Array []}
  meta={
    Array [
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "article",
        "property": "og:type",
      },
      Object {
        "content": "John Doe",
        "name": "twitter:creator",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
    ]
  }
/>
`;

exports[`SEO should render children correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com/foo",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "John Doe",
        "name": "twitter:creator",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
    ]
  }
>
  <script
    src="https://example.com/foo.js"
  />
</Helmet>
`;

exports[`SEO should render images correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={Array []}
  meta={
    Array [
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "John Doe",
        "name": "twitter:creator",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "https://example.com/foo.png",
        "property": "og:image",
      },
      Object {
        "content": undefined,
        "property": "og:image:width",
      },
      Object {
        "content": undefined,
        "property": "og:image:height",
      },
      Object {
        "content": "summary_large_image",
        "name": "twitter:card",
      },
    ]
  }
/>
`;

exports[`SEO should render images pathnames correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com/foo",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "John Doe",
        "name": "twitter:creator",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
    ]
  }
/>
`;

exports[`SEO should render the snapshot correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com/foo/bar",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "John Doe",
        "name": "twitter:creator",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
    ]
  }
/>
`;
